k8s-manifests/k8s-dependencies.yaml
#--- CouchDB ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: couchdb
  namespace: ipa2025
spec:
  replicas: 1
  selector:
    matchLabels:
      app: couchdb
  template:
    metadata:
      labels:
        app: couchdb
    spec:
      containers:
        - name: couchdb
          image: couchdb:3
          ports:
            - containerPort: 5984
          volumeMounts:
            - name: couchdb-storage
              mountPath: /opt/couchdb/data
      volumes:
        - name: couchdb-storage
          persistentVolumeClaim:
            claimName: couchdb-pvc # <--- เชื่อมกับ PVC ที่สร้างในขั้นตอนที่ 4
---
apiVersion: v1
kind: Service
metadata:
  name: couchdb
  namespace: ipa2025
spec:
  type: ClusterIP # <--- Service นี้ใช้คุยภายใน Cluster เท่านั้น
  selector:
    app: couchdb
  ports:
    - port: 5984
      targetPort: 5984
---
#--- RabbitMQ ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: ipa2025
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management
          ports:
            - containerPort: 5672 # <--- Port สำหรับแอปคุยกัน
            - containerPort: 15672 # <--- Port สำหรับหน้า Web UI
          volumeMounts:
            - name: rabbitmq-storage
              mountPath: /var/lib/rabbitmq
      volumes:
        - name: rabbitmq-storage
          persistentVolumeClaim:
            claimName: rabbitmq-pvc # <--- เชื่อมกับ PVC ที่สร้างในขั้นตอนที่ 4
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: ipa2025
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
    - name: app
      port: 5672
      targetPort: 5672
    - name: ui
      port: 15672
      targetPort: 15672
